--- a/.github/workflows/ci_workflow.yaml
+++ b/.github/workflows/ci_workflow.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -13,7 +16,12 @@ jobs:
       - uses: actions/setup-node@v5
         with:
           node-version: '24'
-      - name: install dependencies
+
+      - name: Install dependencies
         run: npm ci
-      - name: check code style
+
+      - name: Linting
         run: npm run lint
+
+      - name: Run tests
+        run: npm test
