--- a/.github/workflows/ci_workflow.yaml
+++ b/.github/workflows/ci_workflow.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Linting
+      - name: Lint
         run: npm run lint
 
       - name: Run tests
@@ -28,3 +28,8 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Deploy
+        env:
+          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+        run: curl "$deploy_url"
