refactor: edit deploy.yml workflow trigger

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,7 @@ name: QuoteAPI Deployment
 
 on:
   workflow_run:
-    workflows:
-      - "QuoteAPI"
+    workflows: ["QuoteAPI"]
     types:
       - completed
 
